--- a/WebSocketClient.html
+++ b/WebSocketClient.html
@@ -1,42 +1,43 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript">
-function WebSocketTest()
-{
-  if ("WebSocket" in window)
+  var field = "div#field_name";
+  function WebSocketTest()
   {
-     alert("WebSocket is supported by your Browser!");
-     // Let us open a web socket
-     var ws = new WebSocket("ws://localhost:8080", "echo-protocol");
-     ws.onopen = function()
-     {
-        // Web Socket is connected, send data using send()
-        ws.send("Message to send");
-        alert("Message is sent...");
-     };
-     ws.onmessage = function (evt) 
-     { 
-        var received_msg = evt.data;
-        alert("Message is received...");
-     };
-     ws.onclose = function()
-     { 
-        // websocket is closed.
-        alert("Connection is closed..."); 
-     };
+    if ("WebSocket" in window)
+    {
+       var ws = new WebSocket("ws://localhost:8080", "echo-protocol");
+       ws.onopen = function()
+       {
+          ws.send("Message to send");
+       };
+       ws.onmessage = function (evt) 
+       { 
+          var received_msg = evt.data;
+          $(field).text(evt.data);
+       };
+       ws.onclose = function()
+       { 
+          $(field).text("Connection closed.")
+       };
+    }
+    else
+    {
+       $(field).text("WebSocket NOT supported by your Browser!");
+    }
   }
-  else
-  {
-     // The browser doesn't support WebSocket
-     alert("WebSocket NOT supported by your Browser!");
-  }
-}
 </script>
 </head>
 <body>
-<div id="sse">
-   <a href="javascript:WebSocketTest()">Run WebSocket</a>
-</div>
+  <div id="panel">
+    <div id="field_name">TEXT GOES HERE</div>
+  </div>
+  <script>
+    $( document ).ready(function() {
+        WebSocketTest();
+    });
+  </script>
 </body>
 </html>
