--- a/WebSocketClient.html
+++ b/WebSocketClient.html
@@ -11,7 +11,7 @@
        var ws = new WebSocket("ws://localhost:8080", "echo-protocol");
        ws.onopen = function()
        {
-          ws.send("Message to send");
+          $(field).text("Connection opened.");
        };
        ws.onmessage = function (evt) 
        { 
@@ -20,7 +20,7 @@
        };
        ws.onclose = function()
        { 
-          $(field).text("Connection closed.")
+          $(field).text("Connection closed.");
        };
     }
     else
